variables.Variables.scala.error
Erreur de compilation :
Variables:1: error: not found: value dejafait
dejafait=0
^Variables:2: error: not found: value nbpas
nbpas =0
^Variables:3: error: not found: value estsurBiscuit
while (!estsurBiscuit()){
        ^Variables:5: error: not found: value nbpas
  nbpas=nbpas+1;
  ^Variables:8: error: not found: value dejafait
while(dejafait!=nbpas){
      ^Variables:8: error: not found: value nbpas
while(dejafait!=nbpas){
                ^Variables:10: error: not found: value dejafait
  dejafait=dejafait+1
  ^